fixed inage paths, added one tag directory

--- a/cdn/adv_mrc/videotma.html
+++ b/cdn/adv_mrc/videotma.html
@@ -87,7 +87,7 @@
     </head>
 
 <body>
-    <a href="http://www.conversantmedia.com"><img src="http://testmyads.com/testmyads/images/vc_logo.gif"
+    <a href="http://www.conversantmedia.com"><img src="../images/vc_logo.gif"
     alt="" height="72" border="0"></a>
     <br />
     <center>
