--- a/cdn/test1.html
+++ b/cdn/test1.html
@@ -21,7 +21,7 @@
 
 	<body link="black">
 		<a href="http://www.conversantmedia.com/">
-			<img src="./images/vc_logo.gif" alt="logo" height="72" border="0">
+			<img src="images/vc_logo.gif" alt="logo" height="72" border="0">
 		</a>
 		<br>
 		<br>
