--- a/cdn/wide.html
+++ b/cdn/wide.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="test1.css" />
 </head>
 <body>
-<a href="http://www.conversantmedia.com"><img src="https://admin.valueclickmedia.com/images/vc_logo.gif"
+<a href="http://www.conversantmedia.com"><img src="images/vc_logo.gif"
     alt="" height="72" border="0"></a><br />
 <!--<img src="images/fakeheader.gif" width="730" height="125" />-->
 <center>
@@ -83,9 +83,8 @@
 		</center>
 	</div>
 	<div id="foot">
-		<a href="test1.html">Menu</a> · <a href="trifecta.html">The Trifecta</a> · <a href="728-468.html">728/468</a> · <a href="120-160.html">120/160</a> · <a href="med.html">Medium Rectangle</a> · <a href="lead.html">Leaderboard</a> · <a href="sky.html">Sky</a> · <a href="wide.html">WideSky</a> · <a href="banner.html">Banner</a>
+		<a href="test1.html">Menu</a> &middot; <a href="trifecta.html">The Trifecta</a> &middot; <a href="med.html">Medium Rectangle</a> &middot; <a href="lead.html">Leaderboard</a> &middot; <a href="sky.html">Sky</a> &middot; <a href="wide.html">WideSky</a> &middot; <a href="banner.html">Banner</a>
 	</div>
-
 </center>
 </body>
 </html>
