--- a/cdn/test1.html
+++ b/cdn/test1.html
@@ -17,8 +17,6 @@
 	</style>
 </head>
 
-<body>
-
 	<body link="black">
 		<a href="http://www.conversantmedia.com/">
 			<img src="images/vc_logo.gif" alt="logo" height="72" border="0">
@@ -36,6 +34,7 @@
 				<option value="site_6">UK/EU_TestMyAds_2 - SID:123890 - Deal:212</option>
                 <option value="site_7">TestMyAdsVideo - SID:119042 - Deal:171</option>
                 <option value="site_8">TestMyAdsVideo1 - SID:119041 - Deal:170</option>
+				<option value="site_9">Launcher - SID:119041 - Deal:170</option>
 			</select>
 			<input type="checkbox" checked name="secureFlag" id="secureFlag" value="secure">
 			<label for="secureFlag">Secure?</label>
@@ -168,6 +167,17 @@
 					<a style="text-decoration:none" data-path="adv_mrc/videotma1.html" href="adv_mrc/videotma1.html">TMA Video1</a>
 				</li></ul>
         </div>
+		<div class="hidden" id="site_9">
+			<h3>Launcher - SID:119041 - Deal:170</h3>
+			<ul>
+				<li>
+					<a style="text-decoration:none" data-path="launcher/all_units.html" href="launcher/all_units.html">All Units</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="launcher/all_units_placement.html" href="launcher/all_units_placement.html">All Units - placements</a>
+				</li>
+			</ul>
+		</div>
 		<br>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script type="text/javascript">
