MPUB-14692 Change launcher pages to point to gdpr 3.0

--- a/cdn/launcher/all_units_ns.html
+++ b/cdn/launcher/all_units_ns.html
@@ -5,7 +5,7 @@
     <title>Test Page - All Units</title>
     <link rel="stylesheet" type="text/css" href="../testMyAds.css" />
     <script src="./lurch.js"></script>
-    <script src="https://cdn.conversant.mgr.consensu.org/gdpr/cmp/3.0/gdpr-cmp-stub.js"></script>
+    <script src="//cdn.conversant.mgr.consensu.org/gdpr/cmp/3.0/gdpr-cmp-stub.js"></script>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
                         <!-- Conversant Media 728x90 LEADERBOARD CODE for testMyads_1 -->
                         <div id="container-1">
                             <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
-                            <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
+                            <script src="//secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                             <script>
                                 conversant.launch('pubcode', 'loadOneAd',
                                     {
@@ -53,7 +53,7 @@
                             <!-- Conversant Media 160x600 WIDE SKYSCRAPER CODE for testMyads_1 -->
                             <div id="container-2">
                                 <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
-                                <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
+                                <script src="//secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                 <script>
                                     conversant.launch('pubcode', 'loadOneAd',
                                         {
@@ -86,7 +86,7 @@
                                 <!-- Conversant Media 300x250 Medium Rectangle CODE for testMyads_1 -->
                                 <div id="container-3">
                                     <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
-                                    <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
+                                    <script src="//secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                     <script>
                                         conversant.launch('pubcode', 'loadOneAd',
                                             {
@@ -106,7 +106,7 @@
                                 <!-- Conversant Media 300x600 Half Page CODE for testMyads_1 -->
                                 <div id="container-4">
                                     <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
-                                    <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
+                                    <script src="//secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                     <script>
                                         conversant.launch('pubcode', 'loadOneAd',
                                             {
@@ -125,7 +125,7 @@
                             <!-- ValueClick Media 120x600 SkyScraper CODE v1.0c for ashleylennonthomas.comvc -->
                             <div id="container-4b">
                                 <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
-                                <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
+                                <script src="//secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                 <script>
                                     conversant.launch('pubcode', 'loadOneAd',
                                         {
@@ -156,7 +156,7 @@
                                 <!-- Conversant Media 320x50 Small Banner CODE for testMyads_1 -->
                                 <div id="container-5">
                                     <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
-                                    <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
+                                    <script src="//secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                     <script>
                                         conversant.launch('pubcode', 'loadOneAd',
                                             {
