--- a/cdn/launcher/all_units_qa.html
+++ b/cdn/launcher/all_units_qa.html
@@ -5,7 +5,8 @@
     <title>Test Page - All Units</title>
     <link rel="stylesheet" type="text/css" href="../testMyAds.css" />
     <script src="./lurch.js"></script>
-    <script src="https://cdn.conversant.mgr.consensu.org/gdpr/cmp/3.0/gdpr-cmp-stub.js"></script>
+    <script src="https://cdn.conversant.mgr.consensu.org/gdpr/cmp/gdpr-cmp-stub.js"></script>
+    <script>var cnvr_launcher_options={lid:lurch.getLid(), pathMap: {'gdprcmp': [/\/\/.+\//, '//cdn-qa.conversant.mgr.consensu.org/gdpr-cmp/']}};</script>
 </head>
 
 <body>
@@ -20,7 +21,6 @@
                     <td colspan="3">
                         <!-- Conversant Media 728x90 LEADERBOARD CODE for testMyads_1 -->
                         <div id="container-1">
-                            <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
                             <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                             <script>
                                 conversant.launch('pubcode', 'loadOneAd',
@@ -30,6 +30,7 @@
                                         format: [{w: 728, h:90}]
                                     }
                                 );
+                                conversant.launch('cvl', 'init');
                             </script>
                         </div>
                         <!-- Conversant Media 728x90 LEADERBOARD CODE for testMyads_1 -->
@@ -52,7 +53,6 @@
                         <div id="nudge">
                             <!-- Conversant Media 160x600 WIDE SKYSCRAPER CODE for testMyads_1 -->
                             <div id="container-2">
-                                <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
                                 <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                 <script>
                                     conversant.launch('pubcode', 'loadOneAd',
@@ -85,7 +85,6 @@
                             <center>
                                 <!-- Conversant Media 300x250 Medium Rectangle CODE for testMyads_1 -->
                                 <div id="container-3">
-                                    <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
                                     <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                     <script>
                                         conversant.launch('pubcode', 'loadOneAd',
@@ -105,7 +104,6 @@
                             <center>
                                 <!-- Conversant Media 300x600 Half Page CODE for testMyads_1 -->
                                 <div id="container-4">
-                                    <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
                                     <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                     <script>
                                         conversant.launch('pubcode', 'loadOneAd',
@@ -124,7 +122,6 @@
                         <td style="background-color: #BEE3F3; width:130px; vertical-align:top; text-align: center;">
                             <!-- ValueClick Media 120x600 SkyScraper CODE v1.0c for ashleylennonthomas.comvc -->
                             <div id="container-4b">
-                                <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
                                 <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                 <script>
                                     conversant.launch('pubcode', 'loadOneAd',
@@ -155,7 +152,6 @@
                             <div class="floatright">
                                 <!-- Conversant Media 320x50 Small Banner CODE for testMyads_1 -->
                                 <div id="container-5">
-                                    <script>var cnvr_launcher_options={lid:lurch.getLid()};</script>
                                     <script src="https://secure.cdn.fastclick.net/js/cnvr-launcher/latest/launcher-stub.min.js"></script>
                                     <script>
                                         conversant.launch('pubcode', 'loadOneAd',
