--- a/cdn/test1.html
+++ b/cdn/test1.html
@@ -174,6 +174,12 @@
 					<a style="text-decoration:none" data-path="launcher/all_units.html" href="launcher/all_units.html">All Units</a>
 				</li>
 				<li>
+					<a style="text-decoration:none" data-path="launcher/all_units_qa.html" href="launcher/all_units_qa.html">All Units QA</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="launcher/all_units_ns.html" href="launcher/all_units_ns.html">All Units NS</a>
+				</li>
+				<li>
 					<a style="text-decoration:none" data-path="launcher/all_units_placement.html" href="launcher/all_units_placement.html">All Units - placements</a>
 				</li>
 			</ul>
