--- a/cdn/adv_mrc/videotma.html
+++ b/cdn/adv_mrc/videotma.html
@@ -64,7 +64,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="width:413px;vertical-align:top;horizontal-align:center">
+                        <td style="width:413px;vertical-align:top;">
                             <p>
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Pellentesque posuere arcu eu lorem. Quisque laoreet velit nec dui. Donec risus erat, eleifend non, ornare mattis, rutrum nec, ante. Sed nec est et felis posuere rutrum. Sed quam est, tincidunt ut, porttitor convallis, molestie eget, dui. Praesent viverra tortor ac nibh. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec vitae metus. Fusce sem libero, consequat sed, egestas sed, mattis sit amet, felis. Nullam nec metus in lectus eleifend rutrum. Sed porta fermentum urna. Mauris pulvinar, nisl non pharetra fringilla, nunc nibh molestie magna, eu pretium eros neque non quam. Morbi id justo nec justo laoreet lobortis. Ut augue. Quisque rhoncus tristique nibh.
                             </p>
