Added Click to play mrc pages

--- a/cdn/adv_mrc/mobile/mobilevideo_ctp.html
+++ b/cdn/adv_mrc/mobile/mobilevideo_ctp.html
@@ -33,8 +33,7 @@ window.onload = function() {
         height: window.innerHeight,
         controls: true,
         image: "",
-        autostart: true,
-        mute: true,
+        autostart: false,
         file: "https://vstatic.fastclick.net/static/archiver/video/f03/bfb/1bb/f03bfb1bb39d9f04761852cbe10a3447f2ebd52c1028d39eb85de7ca7586a3e2.mp4"
     })
 };
