MPUB-15272 add prebid test page with cnvr analytics

--- a/cdn/test1.html
+++ b/cdn/test1.html
@@ -34,6 +34,7 @@
 				<option value="site_5">UK/EU_TestMyAds_2 - SID:123890 - Deal:212</option>
 				<option value="site_6">Kargo Pages</option>
 				<option value="site_7">Launcher - SID:119041 - Deal:170</option>
+				<option value="site_8">Prebid - SID:108060 - Deal:170</option>
 			</select>
 			<!--<input type="checkbox" checked name="secureFlag" id="secureFlag" value="secure">
 			<label for="secureFlag">Secure?</label>-->
@@ -212,6 +213,14 @@
 				</li>
 				<li>
 					<a style="text-decoration:none" data-path="launcher/all_units_placement.html" href="launcher/all_units_placement.html">All Units - placements</a>
+				</li>
+			</ul>
+		</div>
+		<div class="hidden" id="site_8">
+			<h3>Prebid - SID:108060 - Deal:170</h3>
+			<ul>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/prebid.html" href="prebid/prebid.html">Prebid</a>
 				</li>
 			</ul>
 		</div>
