MPUB-15273 Additional Prebid Pages

--- a/cdn/test1.html
+++ b/cdn/test1.html
@@ -217,10 +217,37 @@
 			</ul>
 		</div>
 		<div class="hidden" id="site_8">
-			<h3>Prebid - SID:108060 - Deal:170</h3>
+			<h3>Prebid - SID:108060 - Deal:N/A</h3>
 			<ul>
 				<li>
 					<a style="text-decoration:none" data-path="prebid/prebid.html" href="prebid/prebid.html">Prebid</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/all_units.html" href="prebid/all_units.html">All Units</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/all_units_mixed.html" href="prebid/all_units_mixed.html">All Units Mixed</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/timeout.html" href="prebid/timeout.html">Timeout - 300x250</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/render_failed.html" href="prebid/render_failed.html">Render Failed - 300x250</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/320x50.html"  href="prebid/320x50.html">Baby Banner - 320x50</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/300x600.html" href="prebid/300x600.html">Half Page - 300x600</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/728x90.html" href="prebid/728x90.html">Leaderboard - 728x90</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/300x250.html" href="prebid/300x250.html">Medium Rectangle - 300x250</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/160x600.html" href="prebid/160x600.html">Wide Skycraper - 160x600</a>
 				</li>
 			</ul>
 		</div>
