--- a/cdn/prebid/prebid.html
+++ b/cdn/prebid/prebid.html
@@ -168,17 +168,10 @@
         }, FAILSAFE_TIMEOUT);
 
         googletag.cmd.push(function() {
-            googletag.defineSlot('/19968336/header-bid-tag-0',  [[300, 250],[300,600]], 'MedRect').addService(googletag.pubads());
-            googletag.pubads().enableSingleRequest();
-            googletag.enableServices();
-        });
-        googletag.cmd.push(function() {
-            googletag.defineSlot('/19968336/header-bid-tag-1',  [[728, 90]], 'Leaderboard').addService(googletag.pubads());
-            googletag.pubads().enableSingleRequest();
-            googletag.enableServices();
-        });
-        googletag.cmd.push(function() {
-            googletag.defineSlot('/19968336/header-bid-tag-1',  [[160, 600]], 'Skyscraper').addService(googletag.pubads());
+            googletag.defineSlot('/9119480/testmyads_hb_0',  [[300, 250],[300,600]], 'MedRect').addService(googletag.pubads());
+            googletag.defineSlot('/9119480/testmyads_hb_1',  [[728, 90]], 'Leaderboard').addService(googletag.pubads());
+            googletag.defineSlot('/9119480/testmyads_hb_2',  [[160, 600]], 'Skyscraper').addService(googletag.pubads());
+
             googletag.pubads().enableSingleRequest();
             googletag.enableServices();
         });
