Updates for mrc and video players

--- a/cdn/2/videotma.html
+++ b/cdn/2/videotma.html
@@ -31,13 +31,13 @@
                     advertising: {
                         client: 'vast',
                         tag: tagUrl,
-                        vpaidcontrols: true
+                        vpaidcontrols: false
                     },
                     controls: true,
                     width: 640,
                     height: 360,
-                    autostart: true,
-                    mute: true,
+                    autostart: false,
+                    mute: false,
                     image: '',
                     file: fileUrl
                 })
