--- a/cdn/adv_mrc/videotma.html
+++ b/cdn/adv_mrc/videotma.html
@@ -72,6 +72,7 @@
         };
 
         function stageVideo() {
+            //console.log(document.readyState)
             if (document.readyState === 'complete') {
                 playvideo()
             } else {
