--- a/cdn/adv_mrc/mobile/adselect.html
+++ b/cdn/adv_mrc/mobile/adselect.html
@@ -51,6 +51,10 @@
                     uri += locationParts[i] + "/";
                 }
 
+                if (document.getElementById('dtype_i').checked){
+                    uri+= '/platform/'
+                    console.log("checked");
+                }
                 uri += videoDomain;
 
                 return uri
