--- a/cdn/2/videotma.html
+++ b/cdn/2/videotma.html
@@ -36,8 +36,8 @@
                     controls: true,
                     width: 640,
                     height: 360,
-                    autostart: false,
-                    mute: false,
+                    autostart: true,
+                    mute: true,
                     image: '',
                     file: fileUrl
                 })
