--- a/cdn/adv_mrc/videotma.html
+++ b/cdn/adv_mrc/videotma.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>Test Page - Video</title>
     <link rel="stylesheet" type="text/css" href="../testMyAds.css" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-M3SVNMD');</script>
+    <!-- End Google Tag Manager -->
     
     <style>
         body {
@@ -59,7 +62,7 @@
                 advertising: {
                     client: 'vast',
                     tag: vastUrl,
-                    vpaidcontrols: true
+                    vpaidcontrols: false
                 },
                 width: 640,
                 height: 360,
