--- a/cdn/2/300x600.html
+++ b/cdn/2/300x600.html
@@ -4,6 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <title>Test Page - 300x600</title>
     <link rel="stylesheet" type="text/css" href="http://testmyads.com/testmyads/testMyAds.css" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-M3SVNMD');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body><script src="https://cdn.conversant.mgr.consensu.org/gdpr/cmp/config/c/o/conversantmedia.eu/config.js"></script><script src="https://cdn.conversant.mgr.consensu.org/gdpr/cmp/gdpr-cmp-bootstrap.js"></script>
