--- a/cdn/kargo/KargonautTest1218_Sidekick.html
+++ b/cdn/kargo/KargonautTest1218_Sidekick.html
@@ -5,6 +5,9 @@
     <meta name="keywords" content="sand, relax, golf" />
     <title>Kargonaut Test 1218 - Conversant-Sidekick</title>
     <link rel="stylesheet" type="text/css" href="http://testmyads.com/testmyads/testMyAds.css" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-M3SVNMD');</script>
+    <!-- End Google Tag Manager -->
     
 </head>
 
