--- a/cdn/kargo/KargonautTest1624_Anchor.html
+++ b/cdn/kargo/KargonautTest1624_Anchor.html
@@ -5,14 +5,9 @@
     <meta name="keywords" content="sand, relax, golf" />
     <title>Kargonaut Test 1624 - Conversant-Anchor</title>
     <link rel="stylesheet" type="text/css" href="http://testmyads.com/testmyads/testMyAds.css" />
-    <script>
-    /*DO NOT ALTER *** TestMyAds*/
-    (function(e) { var t = "3324",
-            n = document,
-            r, i, s = { http: "http://cdn.mplxtms.com/s/MasterTMS.min.js", https: "https://secure-cdn.mplxtms.com/s/MasterTMS.min.js" },
-            o = s[/\w+/.exec(window.location.protocol)[0]];
-        i = n.createElement("script"), i.type = "text/javascript", i.async = !0, i.src = o + "#" + t, r = n.getElementsByTagName("script")[0], r.parentNode.insertBefore(i, r), i.readyState ? i.onreadystatechange = function() { if (i.readyState === "loaded" || i.readyState === "complete") i.onreadystatechange = null } : i.onload = function() { try { e() } catch (t) {} } })(function() {});
-    </script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-M3SVNMD');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
