Final merge fix

--- a/cdn/test1.html
+++ b/cdn/test1.html
@@ -200,6 +200,15 @@
 				<li>
 					<a style="text-decoration:none" data-path="kargo/KargonautTest1624_Anchor.html" href="kargo/KargonautTest1624_Anchor.html">Anchor</a>
 				</li>
+				<li>
+					<a style="text-decoration:none" data-path="kargo/KargonautTest1427_Breakaway.html" href="kargo/KargonautTest1427_Breakaway.html">Breakaway</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="kargo/KargonautTest1707_MiddleBanner.html" href="kargo/KargonautTest1707_MiddleBanner.html">Middle Banner</a>
+				</li>
+				<li>
+					<a style="text-decoration:none" data-path="kargo/KargonautTest1710_Hover.html" href="kargo/KargonautTest1710_Hover.html">Hover</a>
+				</li>
 			</ul>
 		</div>
 		<div class="hidden" id="site_7">
