MPUB-15577 add prebid video page

--- a/cdn/test1.html
+++ b/cdn/test1.html
@@ -261,6 +261,9 @@
 				<li>
 					<a style="text-decoration:none" data-path="prebid/160x600.html" href="prebid/160x600.html">Wide Skycraper - 160x600</a>
 				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/prebidVideo.html" href="prebid/prebidVideo.html">Video</a>
+				</li>
 			</ul>
 		</div>
 		<br>
