MPUB-15576 mobile video page

--- a/cdn/prebid/prebidVideo.html
+++ b/cdn/prebid/prebidVideo.html
@@ -35,6 +35,7 @@
         pbjs.bidderSettings = {
             conversant: {
                 bidCpmAdjustment : function(bidCpm) {
+                    // The ad unit '/19968336/prebid_cache_video_adunit' below is controlled by AppNexus and it only responds to $5 CPM.
                     return 5;
                 }
             }
