MPUB-15438 add testpage for prebid-server

--- a/cdn/test1.html
+++ b/cdn/test1.html
@@ -272,6 +272,9 @@
 				<li>
 					<a style="text-decoration:none" data-path="prebid/prebidVideo.html" href="prebid/prebidVideo.html">Video</a>
 				</li>
+				<li>
+					<a style="text-decoration:none" data-path="prebid/prebids2s.html" href="prebid/prebids2s.html">Prebid Server</a>
+				</li>
 			</ul>
 		</div>
 		<div class="hidden" id="site_9" data-niu="huskies">
